2006-11-03  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c (image_comment_update)
	* app/text/gimptext-parasite.c (gimp_text_from_gdyntext_parasite):
	use gimp_any_to_utf8() to deal with invalid UTF-8 strings.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimageparasiteview.[ch]: made non-abstract.

	* app/dialogs/image-properties-dialog.c: show a "Comment" tab if
	the image contains a "gimp-comment" parasite.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpimageparasiteview.[ch]: new abstract base class.

	* app/widgets/gimpimageprofileview.[ch]: derive from
	GimpImageParasiteView.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: pass the number of bytes to
	gimp_parasite_new(), not the number of characters.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (utf8_stricmp): use
	g_utf8_casefold() to implement case insensitive sorting.

2006-11-02  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/Makefile.am: Removed USE_STRCASECMP. Use the
	setting for USE_STRLWR that is used in TinyScheme.

	* plug-ins/script-fu/tinyscheme/Makefile.am: Removed USE_STRCASECMP.

	* plug-ins/script-fu/tinyscheme/scheme.c
	* plug-ins/script-fu/tinyscheme/scheme.h: Added missing SCHEME_EXPORT
	to a couple of function declarations. Eliminated USE_STRCASECMP by
	using internal UTF8 string comparison routine.

	* plug-ins/script-fu/tinyscheme/scheme-private.h: Stop some compiler
	warnings.

2006-11-02  Michael Natterer  <mitch@gimp.org>

	Don't let each terminating plug-in procedure end its progress,
	because that progress may still be in use by another plug-in.

	* app/plug-in/gimpplugin-progress.[ch]
	(gimp_plug_in_progress_attach)
	(gimp_plug_in_progress_detach): new functions which maintain
	a simple attach count for a GimpProgress

	* app/plug-in/gimpplugin-progress.c